Branched the mod2

--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -26,7 +26,7 @@
 
   	<div class="col-lg-3 col-md-6">
 
-  	<section class="menu-label-fish">Fish</section>
+  	<span class="menu-label-fish">Fish</span>
   	
   	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. .</p>
 
@@ -34,18 +34,18 @@
 
   
 
-  	<div class="col-lg-3 col-md-4"> 
+  	<div class="col-lg-3 col-md-6"> 
 
-  	  	<section class="menu-label-chicken">Chicken</section> 	
+  	  	<span class="menu-label-chicken">Chicken</span> 	
 
   	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
 
   	</div>
   		
 
-  	<div class="col-lg-3 col-md-9">
+  	<div class="col-lg-3 col-md-12">
 
-  	  	<section class="menu-label-beef">Beef</section>
+  	  	<span class="menu-label-beef">Beef</span>
   
 
   	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </p>
